--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,19 +5,14 @@ import ContactCTA from '../components/ContactCTA.astro';
 import Hero from '../components/Hero.astro';
 ---
 
-<BaseLayout title="About | Jeanine White" description="About Jeanine White Lorem Ipsum">
+<BaseLayout title="À propos | Matéo Galopin" description="À propos | Matéo Galopin">
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
-				title="About"
-				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
+				title="À propos"
+				tagline="Découvrez mon parcours et mes compétences."
 			>
-				<img
-					width="1553"
-					height="873"
-					src="/assets/at-work.jpg"
-					alt="Jeanine White at work with a colleague"
-				/>
+			<p></p>
 			</Hero>
 
 			<section>
@@ -44,13 +39,13 @@ import Hero from '../components/Hero.astro';
 				</div>
 			</section>
 			<section>
-				<h2 class="section-title">Education</h2>
+				<h2 class="section-title">Diplômes</h2>
 				<div class="content">
 					<p>Corporis voluptates tenetur laudantium.</p>
 				</div>
 			</section>
 			<section>
-				<h2 class="section-title">Skills</h2>
+				<h2 class="section-title">Compétences</h2>
 				<div class="content">
 					<p>officia unde omnis</p>
 				</div>
