--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,19 +30,18 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Jeanine White"
-					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
+					title="Hello, je m'appelle Matéo Galopin"
+					tagline="Admissible à l'ESNA de Bretagne, je suis à la recherche d'une alternance en cybersécurité pour la rentrée de Septembre 2024."
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> Developpeur</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" /> Pentester</Pill>
 					</div>
 				</Hero>
 
 				<img
-					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
+					alt="Mateo"
 					width="480"
 					height="620"
 					src="/assets/portrait.jpg"
@@ -55,8 +54,8 @@ const projects = (await getCollection('work'))
 		<main class="wrapper stack gap-20 lg:gap-48">
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Selected Work</h3>
-					<p>Take a look below at some of my featured work for clients from the past few years.</p>
+					<h3>Mes derniers projets</h3>
+					<p>Découvrez mes derniers projets personnels</p>
 				</header>
 
 				<div class="gallery">
@@ -70,36 +69,16 @@ const projects = (await getCollection('work'))
 						}
 					</Grid>
 				</div>
-
+<!--
 				<div class="cta">
 					<CallToAction href="/work/">
-						View All
+						Tous les projets
 						<Icon icon="arrow-right" size="1.2em" />
 					</CallToAction>
-				</div>
+				</div> 
+-->
 			</section>
 
-			<section class="section with-background bg-variant">
-				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Mentions</h3>
-					<p>
-						I have been fortunate enough to receive praise for my work in several publications. Take
-						a look below to learn more.
-					</p>
-				</header>
-
-				<div class="gallery">
-					<Grid variant="small">
-						{
-							['Medium', 'BuzzFeed', 'The Next Web', 'awwwards.', 'TechCrunch'].map((brand) => (
-								<li class="mention-card">
-									<p>{brand}</p>
-								</li>
-							))
-						}
-					</Grid>
-				</div>
-			</section>
 		</main>
 
 		<ContactCTA />
