--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, je m'appelle Matéo Galopin"
+					title="Hello, je m'appelle Matéo Galopinnnnnn"
 					tagline="Admissible à l'ESNA de Bretagne, je suis à la recherche d'une alternance en cybersécurité pour la rentrée de Septembre 2024."
 					align="start"
 				>
