--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,8 +12,8 @@ const currentYear = new Date().getFullYear();
 		<p>&copy; {currentYear} Matéo Galopin</p>
 	</div>
 	<p class="socials">
-		<a href="https://github.com/me"> GitHub</a>
-		<a href="https://linkedin.com/me/mateo-galopin"> LinkedIn</a>
+		<a href="https://github.com/MateoGalopin" target="_blank"> GitHub</a>
+		<a href="https://linkedin.com/in/mateo-galopin" target="_blank"> LinkedIn</a>
 	</p>
 </footer>
 <style>
