--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,17 +6,17 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+		<p>Grâce à mon passé de développeur, je métrises les langages web HTML/CSS, PHP et JavaScript mais également en Python.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Test d'intrusion</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<p>Depuis plusieurs mois, je passe la plus part de mon temps libre à réaliser des CTF. </p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Gouvernance</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<p>Sensibilisé et certifié aux normes ISO 27001, j'ai de bonnes connaissances sur les mesures et politiques à mettre en oeuvres pour être conforme.</p>
 	</div>
 </section>
 
