--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,35 +19,31 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Background</h2>
 				<div class="content">
 					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-						id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-						pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
-					</p>
-					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
-					</p>
-					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
+						Passionné par la cybersécurité depuis ma formation POEC Développeur en cybersécurité, je souhaite débuter un alternance. 
+						En 2022, j’ai interrompu mon Master Images et Données Multimédia ne me voyant pas évoluer professionnellement
+						dans ces secteurs. Cependant, ayant toujours été intéressé par l’informatique, je suis entré dans le monde
+						du travail en qualité de développeur web full stack pour une entreprise caennaise. Dernièrement, j’ai eu
+						l’opportunité de me former sur les fondamentaux de la cybersécurité pour lesquels j’ai développé un
+						véritable intérêt.
 					</p>
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Diplômes</h2>
 				<div class="content">
-					<p>Corporis voluptates tenetur laudantium.</p>
+					<p>DUT et Licence 3 Informatique.</p>
 				</div>
 			</section>
 			<section>
-				<h2 class="section-title">Compétences</h2>
+				<h2 class="section-title">Savoir-être</h2>
 				<div class="content">
-					<p>officia unde omnis</p>
+					<p>Linux, Pentest, OWASP, Wireshark, BurpSuite</p>
+				</div>
+			</section>
+			<section>
+				<h2 class="section-title">Savoir-être</h2>
+				<div class="content">
+					<p>Capacité d’adaptation, Travail en équipe</p>
 				</div>
 			</section>
 		</main>
