--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,8 @@ const projects = (await getCollection('work'))
 				>
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developpeur</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Pentester</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" /> AdminSys</Pill>
+						<Pill><Icon icon="terminal-window" size="1.33em" /> Pentester</Pill>
 					</div>
 				</Hero>
 
@@ -44,7 +45,7 @@ const projects = (await getCollection('work'))
 					alt="Mateo"
 					width="480"
 					height="620"
-					src="/assets/portrait.jpg"
+					src="/portfolio/assets/portrait.jpg"
 				/>
 			</header>
 
@@ -71,7 +72,7 @@ const projects = (await getCollection('work'))
 				</div>
 <!--
 				<div class="cta">
-					<CallToAction href="/work/">
+					<CallToAction href="/portfolio/work/">
 						Tous les projets
 						<Icon icon="arrow-right" size="1.2em" />
 					</CallToAction>
