--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,7 +19,7 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Background</h2>
 				<div class="content">
 					<p>
-						Passionné par la cybersécurité depuis ma formation POEC Développeur en cybersécurité, je souhaite débuter un alternance. 
+						Passionné par la cybersécurité depuis ma formation POEC Développeur en cybersécurité, je souhaite débuter une alternance. 
 						En 2022, j’ai interrompu mon Master Images et Données Multimédia ne me voyant pas évoluer professionnellement
 						dans ces secteurs. Cependant, ayant toujours été intéressé par l’informatique, je suis entré dans le monde
 						du travail en qualité de développeur web full stack pour une entreprise caennaise. Dernièrement, j’ai eu
@@ -35,15 +35,15 @@ import Hero from '../components/Hero.astro';
 				</div>
 			</section>
 			<section>
-				<h2 class="section-title">Savoir-être</h2>
+				<h2 class="section-title">Connaissances</h2>
 				<div class="content">
-					<p>Linux, Pentest, OWASP, Wireshark, BurpSuite</p>
+					<p>Linux, Pentest, OWASP, Wireshark, BurpSuite, ISO 27001.</p>
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Savoir-être</h2>
 				<div class="content">
-					<p>Capacité d’adaptation, Travail en équipe</p>
+					<p>Capacité d’adaptation, Travail en équipe.</p>
 				</div>
 			</section>
 		</main>
