--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -6,7 +6,7 @@ import Icon from './Icon.astro';
 <aside>
 	<h2>Envie de travailler avec moi ?</h2>
 	<CallToAction href="mailto:galopinmateo47@gmail.com">
-		Ecrivez-moi !
+		Écrivez-moi !
 		<Icon icon="paper-plane-tilt" size="1.2em" />
 	</CallToAction>
 </aside>
