--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -44,7 +44,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 								{
 									active:
 										Astro.url.pathname === href ||
-										(href !== '/' && Astro.url.pathname.startsWith(href)),
+										(href !== '/portfolio/' && Astro.url.pathname.startsWith(href)),
 								},
 							]}
 							href={href}
@@ -82,7 +82,7 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 								{
 									active:
 										Astro.url.pathname === href ||
-										(href !== '/' && Astro.url.pathname.startsWith(href)),
+										(href !== '/portfolio/' && Astro.url.pathname.startsWith(href)),
 								},
 							]}
 							href={href}
