--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,7 +6,7 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Full Stack</h2>
-		<p>Grâce à mon passé de développeur, je maîtrises les langages web HTML/CSS, PHP et JavaScript, mais également en Python.</p>
+		<p>Grâce à mon passé de développeur, je maîtrise les langages web HTML/CSS, PHP et JavaScript, mais également Python.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
@@ -16,7 +16,7 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>Gouvernance</h2>
-		<p>Sensibilisé et certifié aux normes ISO 27001, j'ai de bonnes connaissances sur les mesures et politiques à mettre en œuvres pour être conforme.</p>
+		<p>Sensibilisé et certifié aux normes ISO 27001, j'ai de bonnes connaissances sur les mesures et politiques à mettre en œuvre pour être conforme.</p>
 	</div>
 </section>
 
