--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const projects = (await getCollection('work'))
 					<div class="roles">
 						<Pill><Icon icon="code" size="1.33em" /> Developpeur</Pill>
 						<Pill><Icon icon="pencil-line" size="1.33em" /> AdminSys</Pill>
-						<Pill><Icon icon="terminal-window" size="1.33em" /> Pentester</Pill>
+						<Pill><Icon icon="terminal-window" size="1.33em" /> GRC</Pill>
 					</div>
 				</Hero>
 
