--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,7 +19,7 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Background</h2>
 				<div class="content">
 					<p>
-						Passionné par la cybersécurité depuis ma formation POEC Développeur en cybersécurité, je souhaite débuter une alternance. 
+						Je suis à la recherche d'un poste de technicien informatique ou d'administrateur systèmes et réseaux. 
 						En 2022, j’ai interrompu mon Master Images et Données Multimédia ne me voyant pas évoluer professionnellement
 						dans ces secteurs. Cependant, ayant toujours été intéressé par l’informatique, je suis entré dans le monde
 						du travail en qualité de développeur web full stack pour une entreprise caennaise. Dernièrement, j’ai eu
