--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,13 +31,13 @@ const projects = (await getCollection('work'))
 			<header class="hero">
 				<Hero
 					title="Hello, je m'appelle Matéo Galopin"
-					tagline="Admissible à l'ESNA de Bretagne, je suis à la recherche d'une alternance en cybersécurité."
+					tagline="A la recherche d'un poste de technicien ou d'administrateur."
 					align="start"
 				>
 					<div class="roles">
-						<Pill><Icon icon="code" size="1.33em" /> Developpeur</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> AdminSys</Pill>
-						<Pill><Icon icon="terminal-window" size="1.33em" /> GRC</Pill>
+						<Pill><Icon icon="code" size="1.33em" /> Systemes</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" /> Réseaux</Pill>
+						<Pill><Icon icon="terminal-window" size="1.33em" /> Sécurité</Pill>
 					</div>
 				</Hero>
 
