--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -10,8 +10,8 @@ import Icon from './Icon.astro';
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Test d'intrusion</h2>
-		<p>Depuis plusieurs mois, je passe la plupart de mon temps libre à réaliser des CTF. </p>
+		<h2>Support Utilisateur</h2>
+		<p>J'ai pu apprendre au cours de mon parcours à créer et gérer un serveur GLPI, notemment avec les agents GLPI et la gestion de tickets. </p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
